Minor cleanups in deprecations and other warnings (#1522)